--- a/Lab401.html
+++ b/Lab401.html
@@ -6,6 +6,13 @@
 </head>
   <body>
     <h1>This is my first page! Leone!</h1>
+
+
+    
+    <p>This is the FIRST paragraph (subject to change) </p>
+
+    
     <h3>About Me</h3>
+    <p> 3 things i like </p>
   </body>
 </html>
