--- a/Lab402.html
+++ b/Lab402.html
@@ -30,13 +30,28 @@
     
     <h2> Places i have visted </h2>
 <table>
-<tr><
+<tr>
   <th>Location</th>
   <th>Country</th>
-  <th>Reason for Visiting</th>
-  
-  
-  /tr>
+  <th>Reason for Visiting</th>  
+  </tr>
+  <tr>
+
+    <td>San Julian</td>
+    <td>Mexico</td>
+    <td>Visitng Family</td>  
+  </tr>
+  <tr>
+    <td>Glenwood Springs, Colorad</td>
+    <td>United States</td>
+    <td>Hot Springs weekend Getaway</td>
+  </tr>
+  <tr>
+    <td>Las Vegasm Nevada</td>
+    <td>United States</td>
+    <td>Wanted to see what the hype was about in Vegas. Cool Architecture </td>
+  </tr>
+
 </table>
 
     
