--- a/Lab402.html
+++ b/Lab402.html
@@ -14,6 +14,7 @@
     
     <h3>About Me</h3>
 <o>
+<p> Just a few Hobbie i enjoy.</p>
   <li> Music Production</li>
   <li> Astronomy</li>
   <li> Sports (Go Avs)</li>
