--- a/Lab403.html
+++ b/Lab403.html
@@ -57,7 +57,7 @@
 
 </table>
 
-    <p> Enojoy this picture of my Cat Mira</p>
+    <p> Enjoy this picture of my Cat: Mira</p>
      <img src= "Snapchat-2044839159.jpg" />
     
   </body>
