--- a/Lab403.html
+++ b/Lab403.html
@@ -1,11 +1,11 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title> Leonel Third HTML webpage.</title>
   
 </head>
   <body>
-    <h1>This is the 4th lab for GIS 3410, Web Mapping. I am taking this Class at MSU Denver</h1>
+    <h1>Leonel Third HTML Webpage</h1>
 
 
     
