--- a/LAB502.html
+++ b/LAB502.html
@@ -2,13 +2,25 @@
 <html>
 <head>
   <title> Leonel Fourth HTML webpage.</title>
-  <div id= "container">
+ 
 <style>
-
-  
+    body { width: 100% }
+  #container {
+      width: 70%;
+      text-aligh: left;
+      margin: 0px auto;
+  }
+  #photo {
+    background-color: #eefeee;
+    margin-left: auto;
+    margin-right: 0;
+    float: right;
+    width: 200px;
+      
 </style>
 </head>
   <body>
+<div id= "container">
     <h1>Leonel fifth HTML Webpage</h1>
   
 
