--- a/LAB502.html
+++ b/LAB502.html
@@ -16,7 +16,22 @@
     margin-right: 0;
     float: right;
     width: 200px;
-      
+  }
+  #myphoto {
+    height:auto;
+    width: 150px;
+    border:1px solid: #ddd;
+    border-radius:50%;
+    padding: 5px;
+    display: block;
+    margin: auto;
+  }
+  .caption {
+    font-size:10px;
+    font-family: times;
+    text-align:center;
+  }
+    
 </style>
 </head>
   <body>
