--- a/LAB502.html
+++ b/LAB502.html
@@ -17,7 +17,7 @@
     float: right;
     width: 200px;
   }
-  #myphoto {
+  #photo {
     height:auto;
     width: 150px;
     border:1px solid: #ddd;
@@ -31,7 +31,22 @@
     font-family: times;
     text-align:center;
   }
-    
+p.td, li {
+  font-size: 10px
+  font- family: times; 
+}
+  h1, h2, h3, h4, h5, h6 {
+    font-family:times;
+    background-color:#00008B;
+  }
+  a {text-decoration: none; }
+  a: visted { background-color: #feeeee; }
+  a: link { background-color: #eeeefe; }
+  a: hover { background-color: #fefeee; }
+
+  #hobbies {
+    background-color: #fefeee;
+  
 </style>
 </head>
   <body>
@@ -53,7 +68,7 @@
 
   <p class= "caption" >Leonel Alvarado </p>
   <p class= "caption" >Photo By: Leonel Alvarado</p>
-    My Portfolio <a href="https://sites.google.com/view/leonel-alvarado-portfolio/home">Porfolio.</a>.
+    My <a href="https://sites.google.com/view/leonel-alvarado-portfolio/home">Porfolio.</a>.
 </div>
   
   <div id= "hobbies">
