--- a/LAB502.html
+++ b/LAB502.html
@@ -37,7 +37,7 @@ p.td, li {
 }
   h1, h2, h3, h4, h5, h6 {
     font-family:times;
-    background-color:#00008B;
+    background-color:#008000;
   }
   a {text-decoration: none; }
   a: visted { background-color: #feeeee; }
@@ -46,6 +46,27 @@ p.td, li {
 
   #hobbies {
     background-color: #fefeee;
+
+  #location {
+  font-family: Ariel;
+    border-collapse: collapse;
+    width:100%;
+    
+  }
+    #location th, #location td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    }
+
+    #location th {
+      font: black bold times;
+      background-color: #04aa6d;
+      padding-top: 12px
+      padding-bottom: 12px;
+      text-align:left;
+      color: white;
+    }
+
   
 </style>
 </head>
