--- a/LAB502.html
+++ b/LAB502.html
@@ -67,6 +67,9 @@ p.td, li {
       color: white;
     }
 
+  #location tr: nth-child(even) {background-color: #f2f2f2; }
+
+  #classes {background-color: #eeeefe; }
   
 </style>
 </head>
