--- a/LAB502.html
+++ b/LAB502.html
@@ -161,4 +161,4 @@
         </table>
 
         <p>Enjoy this picture of my Cat, Mira:</p>
-        <img src="Snapchat-2044839159.jpg" alt="M
+      <img src="Snapchat-2044839159.jpg" alt="Mira the Cat" />
