--- a/LAB502.html
+++ b/LAB502.html
@@ -143,7 +143,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>San Julian</td>
+                    <td>San Julian, Jalisco</td>
                     <td>Mexico</td>
                     <td>Visiting Family</td>
                 </tr>
