--- a/LAB502.html
+++ b/LAB502.html
@@ -92,7 +92,12 @@
         #classes {
             background-color: #eeeefe;
         }
-
+        #cat img {
+            width: 150px;    /* or any other size you prefer */
+            height: auto;
+            display: block;
+            margin: auto;
+}
     </style>
 </head>
 
@@ -161,4 +166,7 @@
         </table>
 
         <p>Enjoy this picture of my Cat, Mira:</p>
-      <img src="Snapchat-2044839159.jpg" alt="Mira the Cat" />
+    <div id="cat">
+    <img src="Snapchat-2044839159.jpg" alt="Mira the Cat" />
+</div>
+
