--- a/LAB502.html
+++ b/LAB502.html
@@ -98,6 +98,11 @@
             display: block;
             margin: auto;
 }
+
+        #cat img:hover {
+    transform: scale(1.1); /* This will make the picture of Mira 10% larger when hovered */
+    transition: transform 0.3s ease-in-out; /* Smooth transition effect */
+        
     </style>
 </head>
 
