--- a/LAB502.html
+++ b/LAB502.html
@@ -100,7 +100,7 @@
 }
 
         #cat img:hover {
-    transform: scale(1.1); /* This will make the picture of Mira 10% larger when hovered */
+    transform: scale(1.5); /* This will make the picture of Mira 10% larger when hovered */
     transition: transform 0.3s ease-in-out; /* Smooth transition effect */
         
     </style>
@@ -170,7 +170,7 @@
             </tbody>
         </table>
 
-        <p>Enjoy this picture of my Cat, Mira:</p>
+        <p>Enjoy this picture of my Cat, Mira (hover over the picture btw):</p>
     <div id="cat">
     <img src="Snapchat-2044839159.jpg" alt="Mira the Cat" />
 </div>
