--- a/hangman.html
+++ b/hangman.html
@@ -11,7 +11,7 @@
             }
       #info { padding: 20px; 
               font-color: red;
-              background-color:blue; 
+              background-color: yellow; 
             }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -48,6 +48,9 @@
                     // make a line through the letter
                     $(this).css("text-decoration", "line-through");
 
+                       // Change the color of the clicked letter to green
+                     $(this).css("color", "green");
+
                     // if the letter has already been clicked on, 
                     // let the user know it's already been tried
                     if (triedLetters.includes(letter)) {
@@ -56,6 +59,10 @@
                     // if the letter isn't in the word, reduce
                     // the number of tries and check if they lost
                     } else if (! word.includes(letter)) {
+
+                    // this will change the color to red when clicked incorrectly
+                      $(this).css("color","red");
+                      
 
                       // reduce the number of remaining tries by 1
                       tries = tries - 1;
