--- a/hangman.html
+++ b/hangman.html
@@ -13,6 +13,24 @@
               font-color: red;
               background-color: yellow; 
             }
+
+          /*Added box for bigger lettering */
+        .letter {
+            font-size: 24px;
+            cursor: pointer; /* This makes it obvious you can click the letters */
+        }
+
+        /* Box */
+        #wordInputBox {
+            margin: 20px;
+            font-size: 24px;
+        }
+
+        #wordInput {
+            padding: 10px;
+            font-size: 24px;
+            width: 300px;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
