--- a/lab7.html
+++ b/lab7.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Lab 7, San Julian, Mexico Leaflet Page | By Leonel Alvarado |</title>
 
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+  
+      <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+
+  <style>
+      html, body {
+			height: 100%;
+			margin: auto;
+      }
+		.leaflet-container {
+			height: 600px;
+			width: 700px;
+			max-width: 100%;
+			max-height: 100%;
+			margin: auto;
+		<!--#map { height: 700px; };-->
+	</style>
+</head>
+<body>
+   <div id="map"></div>
+  <script>
+
+
+
+
+
+
+
+      </script>
+</body>
+</html>
