--- a/lab7.html
+++ b/lab7.html
@@ -29,11 +29,56 @@
 <body>
    <div id="map"></div>
   <script>
+	  // This part of the Code came from https://leafletjs.com/examples/quick-start/ //
+	  
+var map = L.map('map').setView([51.505, -0.09], 13);
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(map);
 
+	  var marker = L.marker([43.6703995, -121.50363]).addTo(map);
+	  var circle = L.circle([43.670, -121.495], {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 600
+}).addTo(map);
+	  var circle2 = L.circle([43.727553, -121.230011], {
+    color: 'green',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 3600
+}).addTo(map);
+	  var polygon = L.polygon([
+    [43.75, -121.503],
+    [43.60, -121.49],
+    [43.58, -121.40],
+    [43.664, -121.39],
+]).addTo(map);
+	  marker.bindPopup("<b>La Pine Oregon... where everyday is Sunday!</b><br>La Pine, Oregon.").openPopup();
+	circle.bindPopup("My old neighborhood.");
+	circle2.bindPopup("Paulina Peak, a great place to fish and camp.");
+	polygon.bindPopup("A random polygon of La Pine, Oregon.");
+	  var popup = L.popup()
+    .setLatLng([43.5,-121.5])
+    .setContent("A spot I used to hang out.")
+    .openOn(map);
+	  function onMapClick(e) {
+    alert("You clicked the map at " + e.latlng);
+}
 
+map.on('click', onMapClick);
+	  var popup = L.popup();
 
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+}
 
-
+map.on('click', onMapClick);
 
 
       </script>
