--- a/lab7.html
+++ b/lab7.html
@@ -37,8 +37,8 @@ L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
 
-	  var marker = L.marker([43.6703995, -121.50363]).addTo(map);
-	  var circle = L.circle([43.670, -121.495], {
+	  var marker = L.marker([21.0095536, -102.1795590]).addTo(map);
+	  var circle = L.circle([21.011687930002022, -102.18613086898766], {
     color: 'blue',
     fillColor: '#f03',
     fillOpacity: 0.5,
