--- a/lab7.html
+++ b/lab7.html
@@ -1,66 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Lab 7, La Pine Oregon Leaflet Page, By Justin Neu</title>
-	// THIS CODE IS NOT DISPLAYING//
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+<title>Lab 7, San Julian, Mexico Leaflet Page | By Leonel Alvarado |</title>
+
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  
+      <!-- Make sure you put this AFTER Leaflet's CSS -->
  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-	<style>
-  		html, body {
+
+  <style>
+      html, body {
 			height: 100%;
 			margin: auto;
-		}
+      }
 		.leaflet-container {
-			height: 400px;
-			width: 600px;
+			height: 600px;
+			width: 700px;
 			max-width: 100%;
 			max-height: 100%;
 			margin: auto;
-		}
 		<!--#map { height: 700px; };-->
 	</style>
 </head>
 <body>
    <div id="map"></div>
   <script>
-	  <!-- Code basis came from https://leafletjs.com/examples/quick-start/-->
-  var map = L.map('map').setView([43.67, -121.503], 10);
-  L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+	  // This part of the Code came from https://leafletjs.com/examples/quick-start/ //
+	  
+var map = L.map('map').setView([21.01109195313928, -102.18060763255691], 13);
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
-   
-	  var marker = L.marker([43.6703995, -121.50363]).addTo(map);
-	  var circle = L.circle([43.670, -121.495], {
-    color: 'red',
+
+	  // Casa Alvarado//
+	  var marker = L.marker([21.01109195313928, -102.18060763255691]).addTo(map);
+	  //soccer field//
+	  var circle = L.circle([ 21.011710797097777, -102.18594594139158], { 
+    color: 'blue',
     fillColor: '#f03',
-    fillOpacity: 0.5,
-    radius: 600
+    fillOpacity: 0.4,
+    radius: 80
 }).addTo(map);
-	  var circle2 = L.circle([43.727553, -121.230011], {
+	  var circle2 = L.circle([21.016250035931577, -102.19128670486366], {
     color: 'green',
     fillColor: '#f03',
-    fillOpacity: 0.5,
-    radius: 3600
+    fillOpacity: 0.3,
+    radius: 26
 }).addTo(map);
+	  // these polygon reprecent areas that i have been in Mexico //
+	  // geolocation came from Google Maps. //
 	  var polygon = L.polygon([
-    [43.75, -121.503],
-    [43.60, -121.49],
-    [43.58, -121.40],
-    [43.664, -121.39],
+
 ]).addTo(map);
-	  marker.bindPopup("<b>La Pine Oregon... where everyday is Sunday!</b><br>La Pine, Oregon.").openPopup();
-	circle.bindPopup("My old neighborhood.");
-	circle2.bindPopup("Paulina Peak, a great place to fish and camp.");
-	polygon.bindPopup("A random polygon of La Pine, Oregon.");
-	  var popup = L.popup()
-    .setLatLng([43.5,-121.5])
-    .setContent("A spot I used to hang out.")
+	  marker.bindPopup("<b>San Julian a Town i visit during vacation </b><br>San Julian, Jalisco").openPopup();
+// take a look here add more code//
+	  circle.bindPopup("My Grandparents Home. Casa Alvarado.");
+	   circle2.bindPopup("Soccer Field all the Cousins and friends would play at."
+	
+	  
+	  
+	var popup = L.popup()
+    .setLatLng([21.01109195313928, -102.18060763255691])
+    .setContent("San Julian, Jalisco. The Town i was in October 2023")
     .openOn(map);
 	  function onMapClick(e) {
     alert("You clicked the map at " + e.latlng);
@@ -77,7 +83,8 @@ function onMapClick(e) {
 }
 
 map.on('click', onMapClick);
-	  
-    </script>
+
+//By Leonel Alvarado
+      </script>
 </body>
 </html>
