Synthax error fix lab7.html
Syntax error

--- a/lab7.html
+++ b/lab7.html
@@ -60,7 +60,7 @@ L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 	  marker.bindPopup("<b>San Julian a Town i visit during vacation </b><br>San Julian, Jalisco").openPopup();
 // take a look here add more code//
 	  circle.bindPopup("My Grandparents Home. Casa Alvarado.");
-	  circle2.bindPopup("Soccer Field all the Cousins and friends would play at."
+	  circle2.bindPopup("Soccer Field all the Cousins and friends would play at.")
 	  
 	var popup = L.popup()
     .setLatLng([21.01109195313928, -102.18060763255691])
