--- a/lab8.html
+++ b/lab8.html
@@ -48,7 +48,8 @@
 	$(document).ready(function() {
 
 		// let's create our basemap! -- ##1 here
-    map = L.map('map',{center: [0,0], zoom: 10});
+		
+		map = L.map('map').setView([0,0], 10);
 		
 		// let's add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
 		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -75,6 +76,17 @@
 
 		// let's add the Denver ACS data -- ##4 here
 
+		$.getJSON('./acs_denver_2021.geojson', function(data) {
+			//covert the file (data) into a layer
+			acsDenver2021Layer=L.geoGJSON(data).addTo(map);
+
+			// move the map to the area of the data 
+			map.panTo(acsDenver2021Layer.getBounds().getCenter());
+
+			// add the map to the layer controls
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+			
+		});
 
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
