--- a/lab8.html
+++ b/lab8.html
@@ -76,9 +76,9 @@
 
 		// let's add the Denver ACS data -- ##4 here
 
-		$.getJSON('./acs_denver_2021.geojson', function(data) {
+		$.getJSON('./acs_denver_2021.geojson', function(data)  {
 			//covert the file (data) into a layer
-			acsDenver2021Layer=L.geoGJSON(data).addTo(map);
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
 
 			// move the map to the area of the data 
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
