--- a/Lab8.html
+++ b/Lab8.html
@@ -66,15 +66,26 @@
 		// this is an object to keep track of our three basemaps -- ##2 here
 
 		var baseMaps = { "OpenStreetMap" : OSMTiles,
-			   "Humanitarian OSM" : HOTOSMTiles,
-              		   "OpenTopoMap" : OpenTopoMap };
+			   	"Humanitarian OSM" : HOTOSMTiles,
+              		   	"OpenTopoMap" : OpenTopoMap };
 		
 
 		// the control let's the user turn on / off layers -- ##3 here
 		var layerControl = L.control.layers(baseMaps, null).addto(map);
 
 		// let's add the Denver ACS data -- ##4 here
+		$.getJSON('./acs_denver_2021.geojson', function(data) {
 
+			//convert the file (data) into a layer
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+
+			// move the map to the area of the data 
+			map.panTo(acsDenver2021Layer.getBounds().getCenter());
+
+			// add the map to the layer controls
+
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021" );
+		});
 
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
