--- a/Lab8.html
+++ b/Lab8.html
@@ -89,7 +89,7 @@
             		console.log("Error loading GeoJSON");
 		});
 
-		// let's try to add some remote DRCOG data
+		// let's try to add some remote DRCOG data.
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
 			newLayer = L.geoJSON(data);
 			layerControl.addOverlay(newLayer, "Highway Markers");
